--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,11 +7,13 @@ services:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: sa_db
     ports:
-        - "3307:3306"
-#   command: --init-file /home/erick/Escritorio/1S2020/SA/laboratorio/practica8/init.sql
-    volumes:
-        - "./setup.sql:/docker-entrypoint-initdb.d/1.sql"        
+        - "3307:3306"        
+    volumes:      
+      - ./mysql/data:/var/lib/mysql 
+      - "./setup.sql:/docker-entrypoint-initdb.d/1.sql"        
   web:
     build: .
     ports:
       - "5000:5000"  
+volumes:
+  volumendb:
